k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: it-helpdesk
  labels:
    name: it-helpdesk
